--- a/index.html
+++ b/index.html
@@ -5,30 +5,199 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <h1>Welcome to My Projects</h1>
-  <ul>
-    <li><a target="_blank" href="https://accordion-gilt-ten.vercel.app/">Accordion</a></li>
-<li><a target="_blank" href="https://advicegenerator-ashy.vercel.app/">Advice Generator</a></li>
-<li><a target="_blank" href="https://story-pied-nu.vercel.app/">Alice in Wonderland Adventure</a></li>
-<li><a target="_blank" href="https://artgallery-gamma.vercel.app/">Art Gallery</a></li>
-<li><a target="_blank" href="https://carousel-pygz.vercel.app/">Carousel</a></li>
-<li><a target="_blank" href="https://connectfour-drab.vercel.app/">Connect Four</a></li>
-<li><a target="_blank" href="https://countries-five-theta.vercel.app/">Countries</a></li>
-<li><a target="_blank" href="https://room-sigma-two.vercel.app/">Disney Clue Game</a></li>
-<li><a target="_blank" href="https://disneyrecipecollection.vercel.app/">Disney Recipe Collection</a></li>
-<li><a target="_blank" href="https://hangman-alpha-ashy.vercel.app/">Hangman Game</a></li>
-<li><a target="_blank" href="https://quiz-henna-nine.vercel.app/">Harry Potter Trivia</a></li>
-<li><a target="_blank" href="https://scavengerhunt-iota.vercel.app/">Hogwarts Horcrux Hunt</a></li>
-<li><a target="_blank" href="https://quote-generator-delta-lake.vercel.app/">Marilyn Monroe Quote Generator</a></li>
-<li><a target="_blank" href="https://parallelrealities.vercel.app/">Parallel Realities</a></li>
-<li><a target="_blank" href="https://planetfact-tau.vercel.app/">Planet Fact Site</a></li>
-<li><a target="_blank" href="https://rabbitholewebsite.vercel.app/">Rabbit Hole Website</a></li>
-<li><a target="_blank" href="https://temperaturecontrol.vercel.app/">Temperature Control App</a></li>
-<li><a target="_blank" href="https://timetravel-gamma.vercel.app/">Time Travel</a></li>
-<li><a target="_blank" href="https://trivia-wheat.vercel.app/">Trivia</a></li>
-<li><a target="_blank" href="https://weather-seven-brown.vercel.app/">Weather</a></li>
-  </ul>
+  <!-- <h1>Welcome to My Projects</h1> -->
+  <div class="grid-container">
+    <div class="grid-item accordion">
+      <a target="_blank" href="https://accordion-gilt-ten.vercel.app/">
+        <img src="accordion.gif" alt="Accordion">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item advice-generator">
+      <a target="_blank" href="https://advicegenerator-ashy.vercel.app/">
+        <img src="advice-generator.gif" alt="Advice Generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item alice-in-wonderland">
+      <a target="_blank" href="https://story-pied-nu.vercel.app/">
+        <img src="alice-in-wonderland.gif" alt="Alice in Wonderland Adventure">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item art-gallery">
+      <a target="_blank" href="https://artgallery-gamma.vercel.app/">
+        <img src="art-gallery.gif" alt="Art Gallery">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item carousel">
+      <a target="_blank" href="https://carousel-pygz.vercel.app/">
+        <img src="carousel.gif" alt="Carousel">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item connect-four">
+      <a target="_blank" href="https://connectfour-drab.vercel.app/">
+        <img src="connect-four.gif" alt="Connect Four">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item countries">
+      <a target="_blank" href="https://countries-five-theta.vercel.app/">
+        <img src="countries.gif" alt="Countries">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item disney-clue-game">
+      <a target="_blank" href="https://room-sigma-two.vercel.app/">
+        <img src="disney-clue-game.gif" alt="Disney Clue Game">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item disney-recipe-collection">
+      <a target="_blank" href="https://disneyrecipecollection.vercel.app/">
+        <img src="disney-recipe-collection.gif" alt="Disney Recipe Collection">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item hangman-game">
+      <a target="_blank" href="https://hangman-alpha-ashy.vercel.app/">
+        <img src="hangman-game.gif" alt="Hangman Game">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item harry-potter-trivia">
+      <a target="_blank" href="https://quiz-henna-nine.vercel.app/">
+        <img src="harry-potter-trivia.gif" alt="Harry Potter Trivia">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item hogwarts-horcrux-hunt">
+      <a target="_blank" href="https://scavengerhunt-iota.vercel.app/">
+        <img src="hogwarts-horcrux-hunt.gif" alt="Hogwarts Horcrux Hunt">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item marilyn-monroe-quote-generator">
+      <a target="_blank" href="https://quote-generator-delta-lake.vercel.app/">
+        <img src="marilyn-monroe-quote-generator.gif" alt="Marilyn Monroe Quote Generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item parallel-realities">
+      <a target="_blank" href="https://parallelrealities.vercel.app/">
+        <img src="parallel-realities.gif" alt="Parallel Realities">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item planet-fact-site">
+      <a target="_blank" href="https://planetfact-tau.vercel.app/">
+        <img src="planet-fact-site.gif" alt="Planet Fact Site">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item rabbit-hole-website">
+      <a target="_blank" href="https://rabbitholewebsite.vercel.app/">
+        <img src="rabbit-hole-website.gif" alt="Rabbit Hole Website">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item temperature-control-app">
+      <a target="_blank" href="https://temperaturecontrol.vercel.app/">
+        <img src="temperature-control-app.gif" alt="Temperature Control App">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item time-travel">
+      <a target="_blank" href="https://timetravel-gamma.vercel.app/">
+        <img src="time-travel.gif" alt="Time Travel">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item trivia">
+      <a target="_blank" href="https://trivia-wheat.vercel.app/">
+        <img src="trivia.gif" alt="Trivia">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+    <div class="grid-item weather">
+      <a target="_blank" href="https://weather-seven-brown.vercel.app/">
+        <img src="weather.gif" alt="Weather">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
