--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     </div>
     <div class="grid-item advice-generator">
       <a target="_blank" href="https://advicegenerator-ashy.vercel.app/">
-        <img src="advice-generator.gif" alt="Advice Generator">
+        <img src="advicegenerator.gif" alt="Advice Generator">
       </a>
       <div class="technology">
-        <i class="fab fa-react fa-2x"></i>
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
     <div class="grid-item alice-in-wonderland">
       <a target="_blank" href="https://story-pied-nu.vercel.app/">
-        <img src="alice-in-wonderland.gif" alt="Alice in Wonderland Adventure">
+        <img src="aliceinwonderland.gif" alt="Alice in Wonderland Adventure">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -38,7 +40,7 @@
     </div>
     <div class="grid-item art-gallery">
       <a target="_blank" href="https://artgallery-gamma.vercel.app/">
-        <img src="art-gallery.gif" alt="Art Gallery">
+        <img src="artgallery.gif" alt="Art Gallery">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -56,7 +58,7 @@
     </div>
     <div class="grid-item connect-four">
       <a target="_blank" href="https://connectfour-drab.vercel.app/">
-        <img src="connect-four.gif" alt="Connect Four">
+        <img src="connectfour.gif" alt="Connect Four">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -76,7 +78,7 @@
     </div>
     <div class="grid-item disney-clue-game">
       <a target="_blank" href="https://room-sigma-two.vercel.app/">
-        <img src="disney-clue-game.gif" alt="Disney Clue Game">
+        <img src="clue.gif" alt="Disney Clue Game">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -86,7 +88,7 @@
     </div>
     <div class="grid-item disney-recipe-collection">
       <a target="_blank" href="https://disneyrecipecollection.vercel.app/">
-        <img src="disney-recipe-collection.gif" alt="Disney Recipe Collection">
+        <img src="disneyrecipe.gif" alt="Disney Recipe Collection">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -96,7 +98,7 @@
     </div>
     <div class="grid-item hangman-game">
       <a target="_blank" href="https://hangman-alpha-ashy.vercel.app/">
-        <img src="hangman-game.gif" alt="Hangman Game">
+        <img src="hangman.gif" alt="Hangman Game">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -106,17 +108,15 @@
     </div>
     <div class="grid-item harry-potter-trivia">
       <a target="_blank" href="https://quiz-henna-nine.vercel.app/">
-        <img src="harry-potter-trivia.gif" alt="Harry Potter Trivia">
+        <img src="harrypottertrivia.gif" alt="Harry Potter Trivia">
       </a>
       <div class="technology">
-        <i class="fab fa-html5 fa-2x"></i>
-        <i class="fab fa-css3 fa-2x"></i>
-        <i class="fab fa-js fa-2x"></i>
+        <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
     <div class="grid-item hogwarts-horcrux-hunt">
       <a target="_blank" href="https://scavengerhunt-iota.vercel.app/">
-        <img src="hogwarts-horcrux-hunt.gif" alt="Hogwarts Horcrux Hunt">
+        <img src="hogwartshorcruxhunt.gif" alt="Hogwarts Horcrux Hunt">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -126,7 +126,7 @@
     </div>
     <div class="grid-item marilyn-monroe-quote-generator">
       <a target="_blank" href="https://quote-generator-delta-lake.vercel.app/">
-        <img src="marilyn-monroe-quote-generator.gif" alt="Marilyn Monroe Quote Generator">
+        <img src="marilynmonroequotegenerator.gif" alt="Marilyn Monroe Quote Generator">
       </a>
       <div class="technology">
         <i class="fab fa-react fa-2x"></i>
@@ -134,7 +134,7 @@
     </div>
     <div class="grid-item parallel-realities">
       <a target="_blank" href="https://parallelrealities.vercel.app/">
-        <img src="parallel-realities.gif" alt="Parallel Realities">
+        <img src="parallelrealities.gif" alt="Parallel Realities">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -144,7 +144,7 @@
     </div>
     <div class="grid-item planet-fact-site">
       <a target="_blank" href="https://planetfact-tau.vercel.app/">
-        <img src="planet-fact-site.gif" alt="Planet Fact Site">
+        <img src="planetfact.gif" alt="Planet Fact Site">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -154,7 +154,7 @@
     </div>
     <div class="grid-item rabbit-hole-website">
       <a target="_blank" href="https://rabbitholewebsite.vercel.app/">
-        <img src="rabbit-hole-website.gif" alt="Rabbit Hole Website">
+        <img src="rabbitholewebsite.gif" alt="Rabbit Hole Website">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -164,7 +164,7 @@
     </div>
     <div class="grid-item temperature-control-app">
       <a target="_blank" href="https://temperaturecontrol.vercel.app/">
-        <img src="temperature-control-app.gif" alt="Temperature Control App">
+        <img src="temperaturecontrol.gif" alt="Temperature Control App">
       </a>
       <div class="technology">
         <i class="fab fa-react fa-2x"></i>
@@ -172,7 +172,7 @@
     </div>
     <div class="grid-item time-travel">
       <a target="_blank" href="https://timetravel-gamma.vercel.app/">
-        <img src="time-travel.gif" alt="Time Travel">
+        <img src="historicaltimetravel.gif" alt="Time Travel">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
