--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <!-- <h1>Welcome to My Projects</h1> -->
+  <header class="header">
+    <h1>Welcome to My Projects</h1>
+  </header>
   <div class="grid-container">
     <div class="grid-item accordion">
       <a target="_blank" href="https://accordion-gilt-ten.vercel.app/">
