--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="grid-item disney-clue-game">
       <a target="_blank" href="https://room-sigma-two.vercel.app/">
-        <img src="clue.gif" alt="Disney Clue Game">
+        <img src="disneycluegame.gif" alt="Disney Clue Game">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
