--- a/index.html
+++ b/index.html
@@ -192,6 +192,18 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item typeracer">
+      <a target="_blank" href="https://typeracer-one.vercel.app/">
+        <img src="typeracer.gif" alt="Typeracer">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item weather">
       <a target="_blank" href="https://weather-seven-brown.vercel.app/">
         <img src="weather.gif" alt="Weather">
