--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item wordchain">
+      <a target="_blank" href="https://wordchain.vercel.app/">
+        <img src="wordchain.gif" alt="Word chain">
+      </a>
+      <div class="technology">
+        <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+
   </div>
 </body>
 </html>
