--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
         <img src="wordchain.gif" alt="Word chain">
       </a>
       <div class="technology">
-        <i class="fab fa-react fa-2x"></i>
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
 
