--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+    <div class="grid-item rhyme-time">
+      <a target="_blank" href="https://rhymetime.vercel.app/">
+        <img src="rhymetime.gif" alt="Rhyme Time">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
     <div class="grid-item temperature-control-app">
       <a target="_blank" href="https://temperaturecontrol.vercel.app/">
         <img src="temperaturecontrol.gif" alt="Temperature Control App">
