--- a/index.html
+++ b/index.html
@@ -214,6 +214,17 @@
       </div>
     </div>
 
+    <div class="grid-item uno">
+      <a target="_blank" href="https://uno-gules.vercel.app/">
+        <img src="uno.gif" alt="Uno">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item weather">
       <a target="_blank" href="https://weather-seven-brown.vercel.app/">
         <img src="weather.gif" alt="Weather">
