--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item air-hockey">
+      <a target="_blank" href="https://airhockey-theta.vercel.app/">
+        <img src="airhockey.gif" alt="Air Hockey">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item alice-in-wonderland">
       <a target="_blank" href="https://story-pied-nu.vercel.app/">
         <img src="aliceinwonderland.gif" alt="Alice in Wonderland Adventure">
@@ -98,6 +110,18 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item fireworks">
+      <a target="_blank" href="https://fireworks-pi.vercel.app/">
+        <img src="fireworks.gif" alt="Fireworks">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item hangman-game">
       <a target="_blank" href="https://hangman-alpha-ashy.vercel.app/">
         <img src="hangman.gif" alt="Hangman Game">
@@ -126,6 +150,18 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item kaleidoscope">
+      <a target="_blank" href="https://kaleidoscope-seven.vercel.app/">
+        <img src="kaleidoscope.gif" alt="Kaleidoscope">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item marilyn-monroe-quote-generator">
       <a target="_blank" href="https://quote-generator-delta-lake.vercel.app/">
         <img src="marilynmonroequotegenerator.gif" alt="Marilyn Monroe Quote Generator">
@@ -134,6 +170,40 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item maze">
+      <a target="_blank" href="https://maze-neon.vercel.app/">
+        <img src="maze.gif" alt="Maze">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item memory">
+      <a target="_blank" href="https://memory-nine-drab.vercel.app/">
+        <img src="memory.gif" alt="Memory">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item paint">
+      <a target="_blank" href="https://paint-rho.vercel.app/">
+        <img src="paint.gif" alt="Paint">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item parallel-realities">
       <a target="_blank" href="https://parallelrealities.vercel.app/">
         <img src="parallelrealities.gif" alt="Parallel Realities">
@@ -174,6 +244,40 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
+    <div class="grid-item simon-says">
+      <a target="_blank" href="https://simonsays-rosy.vercel.app/">
+        <img src="simonsays.gif" alt="Simon Says">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item sudoku">
+      <a target="_blank" href="https://sudoku-smoky.vercel.app/">
+        <img src="sudoku.gif" alt="Sudoku">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item sun">
+      <a target="_blank" href="https://sun-one.vercel.app/">
+        <img src="sun.gif" alt="Sun">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item temperature-control-app">
       <a target="_blank" href="https://temperaturecontrol.vercel.app/">
         <img src="temperaturecontrol.gif" alt="Temperature Control App">
