--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
       </div>
     </div>
 
+    <div class="grid-item html-tutorial">
+      <a target="_blank" href="https://htmltutorial.vercel.app/">
+        <img src="htmltutorial.gif" alt="Html Tutorial">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item kaleidoscope">
       <a target="_blank" href="https://kaleidoscope-seven.vercel.app/">
         <img src="kaleidoscope.gif" alt="Kaleidoscope">
