--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
-    <div class="grid-item disney-recipe-collection">
+    <!-- <div class="grid-item disney-recipe-collection">
       <a target="_blank" href="https://disneyrecipecollection.vercel.app/">
         <img src="disneyrecipe.gif" alt="Disney Recipe Collection">
       </a>
@@ -109,7 +109,7 @@
         <i class="fab fa-css3 fa-2x"></i>
         <i class="fab fa-js fa-2x"></i>
       </div>
-    </div>
+    </div> -->
 
     <div class="grid-item fireworks">
       <a target="_blank" href="https://fireworks-pi.vercel.app/">
