--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header class="header">
     <h1>Welcome to My Projects</h1>
   </header>
+
   <div class="grid-container">
     <div class="grid-item accordion">
       <a target="_blank" href="https://accordion-gilt-ten.vercel.app/">
@@ -20,9 +21,21 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item advice-generator">
       <a target="_blank" href="https://advicegenerator-ashy.vercel.app/">
         <img src="advicegenerator.gif" alt="Advice Generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item age-calculator">
+      <a target="_blank" href="https://age-calculator-jade-nine.vercel.app">
+        <img src="agecalculator.gif" alt="Air Hockey">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -52,6 +65,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item art-gallery">
       <a target="_blank" href="https://artgallery-gamma.vercel.app/">
         <img src="artgallery.gif" alt="Art Gallery">
@@ -62,6 +76,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item carousel">
       <a target="_blank" href="https://carousel-pygz.vercel.app/">
         <img src="carousel.gif" alt="Carousel">
@@ -70,6 +85,7 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item connect-four">
       <a target="_blank" href="https://connectfour-drab.vercel.app/">
         <img src="connectfour.gif" alt="Connect Four">
@@ -80,6 +96,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item countries">
       <a target="_blank" href="https://countries-five-theta.vercel.app/">
         <img src="countries.gif" alt="Countries">
@@ -90,6 +107,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item disney-clue-game">
       <a target="_blank" href="https://room-sigma-two.vercel.app/">
         <img src="disneycluegame.gif" alt="Disney Clue Game">
@@ -100,6 +118,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <!-- <div class="grid-item disney-recipe-collection">
       <a target="_blank" href="https://disneyrecipecollection.vercel.app/">
         <img src="disneyrecipe.gif" alt="Disney Recipe Collection">
@@ -132,6 +151,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item harry-potter-trivia">
       <a target="_blank" href="https://quiz-henna-nine.vercel.app/">
         <img src="harrypottertrivia.gif" alt="Harry Potter Trivia">
@@ -140,6 +160,7 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item hogwarts-horcrux-hunt">
       <a target="_blank" href="https://scavengerhunt-iota.vercel.app/">
         <img src="hogwartshorcruxhunt.gif" alt="Hogwarts Horcrux Hunt">
@@ -223,6 +244,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item planet-fact-site">
       <a target="_blank" href="https://planetfact-tau.vercel.app/">
         <img src="planetfact.gif" alt="Planet Fact Site">
@@ -233,6 +255,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item rabbit-hole-website">
       <a target="_blank" href="https://rabbitholewebsite.vercel.app/">
         <img src="rabbitholewebsite.gif" alt="Rabbit Hole Website">
@@ -243,6 +266,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item rhyme-time">
       <a target="_blank" href="https://rhymetime.vercel.app/">
         <img src="rhymetime.gif" alt="Rhyme Time">
@@ -295,6 +319,7 @@
         <i class="fab fa-react fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item time-travel">
       <a target="_blank" href="https://timetravel-gamma.vercel.app/">
         <img src="historicaltimetravel.gif" alt="Time Travel">
@@ -305,6 +330,7 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
+
     <div class="grid-item trivia">
       <a target="_blank" href="https://trivia-wheat.vercel.app/">
         <img src="trivia.gif" alt="Trivia">
