--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="grid-item age-calculator">
       <a target="_blank" href="https://age-calculator-jade-nine.vercel.app">
-        <img src="agecalculator.gif" alt="Air Hockey">
+        <img src="agecalculator.gif" alt="age calculator">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -66,9 +66,31 @@
       </div>
     </div>
 
+    <div class="grid-item animepicsgenerator">
+      <a target="_blank" href="https://anime-pics-generator-orcin.vercel.app/">
+        <img src="animepicsgenerator.gif" alt="anime pics generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item art-gallery">
       <a target="_blank" href="https://artgallery-gamma.vercel.app/">
         <img src="artgallery.gif" alt="Art Gallery">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item bmicalculator">
+      <a target="_blank" href="https://bmi-calculator2-wine.vercel.app/">
+        <img src="bmicalculator.gif" alt="bmi calculator">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -97,9 +119,42 @@
       </div>
     </div>
 
+    <div class="grid-item counter">
+      <a target="_blank" href="https://counter2-livid.vercel.app/">
+        <img src="counter.gif" alt="counter">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item countries">
       <a target="_blank" href="https://countries-five-theta.vercel.app/">
         <img src="countries.gif" alt="Countries">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item currencyconverter">
+      <a target="_blank" href="https://currency-converter-blue-six.vercel.app/">
+        <img src="currencyconverter.gif" alt="currency converter">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item dadjokesgenerator">
+      <a target="_blank" href="https://dad-jokes-generator-one.vercel.app/">
+        <img src="dadjokesgenerator.gif" alt="dad jokes generator">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -119,6 +174,28 @@
       </div>
     </div>
 
+    <div class="grid-item emojirating">
+      <a target="_blank" href="https://emoji-rating-gamma.vercel.app/">
+        <img src="emojirating.gif" alt="emoji rating">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item englishdictionary">
+      <a target="_blank" href="https://english-dictionary-green-nu.vercel.app/">
+        <img src="englishdictionary.gif" alt="english dictionary">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <!-- <div class="grid-item disney-recipe-collection">
       <a target="_blank" href="https://disneyrecipecollection.vercel.app/">
         <img src="disneyrecipe.gif" alt="Disney Recipe Collection">
@@ -129,6 +206,17 @@
         <i class="fab fa-js fa-2x"></i>
       </div>
     </div> -->
+
+    <div class="grid-item feedbackui">
+      <a target="_blank" href="https://feedback-ui-delta-five.vercel.app/">
+        <img src="feedbackui.gif" alt="feedback ui">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
 
     <div class="grid-item fireworks">
       <a target="_blank" href="https://fireworks-pi.vercel.app/">
@@ -181,9 +269,31 @@
       </div>
     </div>
 
+    <div class="grid-item imageslider">
+      <a target="_blank" href="https://image-slider-gamma-mocha.vercel.app/">
+        <img src="imageslider.gif" alt="image slider">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item kaleidoscope">
       <a target="_blank" href="https://kaleidoscope-seven.vercel.app/">
         <img src="kaleidoscope.gif" alt="Kaleidoscope">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item loancalculator">
+      <a target="_blank" href="https://loan-calculator-beryl.vercel.app/">
+        <img src="loancalculator.gif" alt="loan calculator">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -215,6 +325,39 @@
     <div class="grid-item memory">
       <a target="_blank" href="https://memory-nine-drab.vercel.app/">
         <img src="memory.gif" alt="Memory">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item minicalendar">
+      <a target="_blank" href="https://mini-calendar-three.vercel.app/">
+        <img src="minicalendar.png" alt="mini calendar">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item navbar">
+      <a target="_blank" href="https://navbar-snowy.vercel.app/">
+        <img src="navbar.gif" alt="navbar">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item note">
+      <a target="_blank" href="https://note-app-omega-eight.vercel.app/">
+        <img src="note.gif" alt="note">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -256,6 +399,28 @@
       </div>
     </div>
 
+    <div class="grid-item pomodorotimer">
+      <a target="_blank" href="https://pomodoro-timer-livid-seven.vercel.app/">
+        <img src="pomodorotimer.gif" alt="pomodoro timer">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item quotegenerator">
+      <a target="_blank" href="https://quote-generator2-mauve.vercel.app/">
+        <img src="quotegenerator.gif" alt="quote generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item rabbit-hole-website">
       <a target="_blank" href="https://rabbitholewebsite.vercel.app/">
         <img src="rabbitholewebsite.gif" alt="Rabbit Hole Website">
@@ -267,9 +432,64 @@
       </div>
     </div>
 
+    <div class="grid-item randomcolorgenerator">
+      <a target="_blank" href="https://random-color-generator-pink.vercel.app/">
+        <img src="randomcolorgenerator.gif" alt="random color generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item randomemoji">
+      <a target="_blank" href="https://random-emoji-rho.vercel.app/">
+        <img src="randomemoji.gif" alt="random emoji generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item randompasswordgenerator">
+      <a target="_blank" href="https://random-password-generator-blush.vercel.app/">
+        <img src="randompasswordgenerator.gif" alt="random password generator">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item realtimecharactercounter">
+      <a target="_blank" href="https://real-time-character-counter-delta.vercel.app/">
+        <img src="realtimecharactercounter.gif" alt="real time character counter">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item rhyme-time">
       <a target="_blank" href="https://rhymetime.vercel.app/">
         <img src="rhymetime.gif" alt="Rhyme Time">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item rockpaperscissors">
+      <a target="_blank" href="https://rock-paper-scissors-game-one-phi.vercel.app/">
+        <img src="rockpaperscissors.gif" alt="RPS">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -320,9 +540,42 @@
       </div>
     </div>
 
+    <div class="grid-item temperature-converter-app">
+      <a target="_blank" href="https://temperature-converter-nu-vert.vercel.app/">
+        <img src="temperatureconverter.gif" alt="Temperature Converter App">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item testimonialslider">
+      <a target="_blank" href="https://testimonial-slider-bice.vercel.app/">
+        <img src="testimonialslider.gif" alt="testimonial slider">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
     <div class="grid-item time-travel">
       <a target="_blank" href="https://timetravel-gamma.vercel.app/">
         <img src="historicaltimetravel.gif" alt="Time Travel">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item tip-calculator">
+      <a target="_blank" href="https://tip-calculator-seven-mu.vercel.app/">
+        <img src="tipcalculator.gif" alt="tip calculator">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
@@ -370,6 +623,17 @@
       </a>
       <div class="technology">
         <i class="fab fa-react fa-2x"></i>
+      </div>
+    </div>
+
+    <div class="grid-item weightconverter">
+      <a target="_blank" href="https://weight-converter-henna.vercel.app/">
+        <img src="weightconverter.gif" alt="weight converter">
+      </a>
+      <div class="technology">
+        <i class="fab fa-html5 fa-2x"></i>
+        <i class="fab fa-css3 fa-2x"></i>
+        <i class="fab fa-js fa-2x"></i>
       </div>
     </div>
 
