--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
     <div class="grid-item minicalendar">
       <a target="_blank" href="https://mini-calendar-three.vercel.app/">
-        <img src="minicalendar.png" alt="mini calendar">
+        <img src="minicalendar.PNG" alt="mini calendar">
       </a>
       <div class="technology">
         <i class="fab fa-html5 fa-2x"></i>
